Fix versions for tests